# etl-toolbox

./: .gitignore  .gitlab-ci.yml  LICENSE  README-fr.md  README.md  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: ci-lint-and-format.yml  ci-release.yml  ci-run-tests.yml  ci-test-packaging.yml  ci.yml
database/interface/: __init__.py  abstract_database_objects_handlers.py
database/orm/: __init__.py
database/orm/base/: __init__.py  base_table_mapping.py
database/orm/mapping/base/: __init__.py  base_table_mapping.py
elt_logging/: __init__.py  etl_logger.py
etl_logging/: __init__.py  etl_logger.py
nrcan_etl_toolbox/database/: __init__.py  database_connection_config.py  database_connector.py
nrcan_etl_toolbox/database/interface/: __init__.py  abstract_database_objects_handlers.py
nrcan_etl_toolbox/database/orm/: __init__.py
nrcan_etl_toolbox/database/orm/base/: __init__.py  base_table_mapping.py
nrcan_etl_toolbox/etl_logging/: __init__.py  etl_logger.py
nrcan_etl_toolbox/etl_toolbox/: __init__.py  reader_factory.py
nrcan_etl_toolbox/etl_toolbox/data_downloader/ftp/: __init__.py  ftp_downloader.py
nrcan_etl_toolbox/etl_toolbox/reader/: __init__.py  base_reader.py  csv_reader.py  excel_reader.py  geopackage_reader.py  json_reader.py  postgis_reader.py  reader_factory.py  shapefile_reader.py
nrcan_etl_toolbox/etl_toolbox/reader/source_readers/: __init__.py  access_db_reader.py  base_reader.py  csv_reader.py  excel_reader.py  geopackage_reader.py  json_reader.py  postgis_reader.py  shapefile_reader.py
tests/: reader_factory_test.py  test_base_reader.py  test_base_table_mapping.py  test_etl_logger.py  test_excel_reader.py  test_geopackage_reader.py
tests/data/: empty_geopackage.gpkg
