[project]
name = "nrcan_etl_toolbox"
version = "0.1.0"
description = "Package for logging and database interfacing using SQLAlchemy and SQLModels"
authors = [
    { name = "Xavier Malet", email = "xavier.malet@nrcan-rncan.gc.ca" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "SQLAlchemy (>=2.0.40,<3.0.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "pytest (>=8.0.0)", "shapely"
]


cache-dir = "./venv"

[tool.poetry]
packages = [{ include = "nrcan_etl_toolbox" }
]

[tool.poetry.group.test.dependencies]
pytest = "8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
