[project]
name = "nrcan-etl-toolbox"

version = "0.2.5"

description = "Package for logging and database interfacing using SQLAlchemy and SQLModels"
authors = [
    { name = "Xavier Malet", email = "xavier.malet@nrcan-rncan.gc.ca" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10,<4"
dependencies = [
    "SQLAlchemy (>=2.0.40,<3.0.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "pytest (>=8.0.0)"
    , "shapely"
    , "python-dotenv"
    , "openpyxl (>=3.1.5,<4.0.0)"
    , "pandas"
    , "geopandas"
    , "fiona (>=1.10.1)"
    , "geoalchemy2 (>=0.17.1,<0.18.0)"
    , "psycopg2-binary (>=2.9.10,<3.0.0)"
    , "tqdm (>=4.67.1,<5.0.0)"
    , "ruff (>=0.11.10,<0.12.0)", "paramiko (>=3.5.1,<4.0.0)", "omegaconf (>=2.3.0,<3.0.0)"
]


cache-dir = "./venv"

[tool.poetry]
packages = [{ include = "nrcan_etl_toolbox" }
]


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
testcontainers = "^4.10.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
